<resources>
    <string name="app_name">Quản Lí Công Việc</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="thong_bao">Thông báo</string>
    <string name="ca_nhan">Cá nhân</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_user">User</string>
    <string name="input_password">Password</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="s_create_account">Tạo tài khoản mới</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="txt_signin">Đã có tài khoản? Đăng nhập</string>
    <string name="txt_dang_ky">Đăng ký</string>
    <string name="avatar_user">avatar User</string>
    <string name="ban_dang_nghi_gi">Bạn đang nghĩ gì</string>
    <string name="img_post">img_post</string>
</resources>