<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            android:hint="@string/input_user"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/edt_user"
            android:hint="@string/input_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_login"
            app:layout_constraintTop_toBottomOf="@id/forgot_pwd"
            app:layout_constraintBottom_toTopOf="@id/sign_up"/>

        <TextView
            android:id="@+id/forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/edt_password" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_create_account"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>