<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dang_ky"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_FullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            android:hint="Full Name"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/edt_regUser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            android:hint="@string/input_user"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/edt_regPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/edt_user"
            android:hint="@string/input_password"/>

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/edt_user"
            android:hint="@string/confirm_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_dang_ky"
            app:layout_constraintTop_toBottomOf="@id/forgot_pwd"
            app:layout_constraintBottom_toTopOf="@id/sign_up"/>

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_signin"
            android:textSize="16sp"
            android:textColor="@color/primary_blue"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>