<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


        <LinearLayout
            android:id="@+id/linear_info_post_user"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/avatar_post"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/custom_user_bar"
                android:contentDescription="@string/avatar_user" />
            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_user"
                    android:textStyle="bold"/>
                <TextView
                    android:padding="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_user" />
            </LinearLayout>
        </LinearLayout>
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_user"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:layout_below="@id/linear_info_post_user"/>

    <ImageView
        android:id="@+id/imv_post"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_post"
        android:layout_below="@id/tv_content"/>

</RelativeLayout>